<resources>
    <string name="app_name">Hybrid Maps Android</string>

    <string name="action_points">Points</string>
    <string name="action_maps">Maps</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_points">Points</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_settings">Settings</string>

    <string name="set_cmd_connection_work">Online</string>
    <string name="set_lbl_connection_work">Enable online or offline mode</string>
    <string name="set_txt_layer_online">http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png</string>
    <string name="set_lbl_layer_online">Set the URL of the tile server when working in online mode</string>
    <string name="set_txt_layer_offline"></string>
    <string name="set_lbl_layer_offline">Set the URL of the tile server when working in offline mode for downloading the basemap information</string>
    <string name="set_hnt_url">https://www.myserver.com</string>
    <string name="set_cmd_save">Save</string>

</resources>
