<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.cgiar.ciat.hybridmapsandroid.views.activities.SettingsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_lbl_connection_work"
        style="@style/text_help"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_cmd_connection_work"
        android:id="@+id/set_cmd_connection_work"
        android:layout_gravity="center_horizontal"
        style="@style/text_switch"/>
    <View
        android:layout_height="@dimen/set_hr_height"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:layout_marginBottom="@dimen/set_hr_padding"
        android:layout_marginTop="@dimen/set_hr_padding"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_lbl_layer_online"
        style="@style/text_help"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_txt_layer_online"
        android:text="@string/set_txt_layer_online"
        android:hint="@string/set_hnt_url"
        style="@style/text_edit"
        android:singleLine="true"
        android:lines="1"/>
    <View
        android:layout_height="@dimen/set_hr_height"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:layout_marginBottom="@dimen/set_hr_padding"
        android:layout_marginTop="@dimen/set_hr_padding"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_lbl_layer_offline"
        style="@style/text_help"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_txt_layer_offline"
        android:text="@string/set_txt_layer_offline"
        android:hint="@string/set_hnt_url"
        style="@style/text_edit"
        android:singleLine="true"
        android:lines="1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_cmd_save"
        android:text="@string/set_cmd_save"
        android:onClick="save_preferences"/>

</LinearLayout>

